--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <body style="margin: 0px; overflow: hidden;" oncontextmenu="return false;">
   <canvas id="unity-canvas"
-    style="position: fixed; width: 100%; height: 100%; background: url('Build/cc122c80ddfade3cd2cb2176d5c480ab.jpg') center / cover">
+    style="position: fixed; width: 100%; height: 100%; background: url('Build/0b8ea8352ea92e85ca27fec9d30096ff.jpg.unityweb') center / cover">
   </canvas>
 
   <div id="progress-bar" style="position: absolute; left: 0%; right: 100%; top: 49%; bottom: 49%; background-color: white;"></div>
@@ -47,9 +47,9 @@
   <script src="Build/Freefall-Trouble-VK.loader.js"></script>
   <script>
     const settings = {
-      dataUrl: "Build/e600d0fae49d0cad144a8df1e66554c5.data",
-      frameworkUrl: "Build/cd9c6ba6cf39189b9356b1301542e58f.js",
-      codeUrl: "Build/8e39d98c5f0311e94f93767dd02b3316.wasm",
+      dataUrl: "Build/526191b62d552046de32d16e5ed5f313.data.unityweb",
+      frameworkUrl: "Build/f64c2a255daf364fa08e740e57705c55.js.unityweb",
+      codeUrl: "Build/93f74847bcd4a5953bb92f57041424fc.wasm.unityweb",
       streamingAssetsUrl: "StreamingAssets",
       companyName: "Agava",
       productName: "FreefallTrouble",
